--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,45 @@
-<h1>Burgers!</h1>
+<div class="header">
+    <h1>Burgers!</h1>
+    <img src=" /assets/img/burger.jpg" class="burger-img">
+</div>
 
-<h2>Order A Burger!</h2>
+<div class="row">
+    <div class="col-sm">
+        <h2 class="text-center header2">Ordered Burgers</h2>
+        {{#each burgers}}
+        {{#unless devoured}}
+        <div class="p-1 bg-primary text-white burgerBox">{{burger_name}}
+            <button type="button " class="devourBtn btn btn-warning btn-large">Devour</button>
+        </div>
+        {{/unless}}
+        {{/each}}
 
-<ul>
-  {{#each burgers}}
-  {{#unless devoured}}
-  {{burger_name}}
-  {{/unless}}
-  {{/each}}
-</ul>
+    </div>
+    <div class="col-sm">
+        <h2 class="text-center header2, devoured">Devoured Burgers</h2>
+        {{#each burgers}}
+        {{#if devoured}}
+        <div class="d-block text-center p-1 bg-danger text-white burgerBox">{{burger_name}}</div>
+        {{/if}}
+        {{/each}}
+    </div>
+</div>
 
-<h2>Burgers That Have Been Eater</h2>
 
-<ul>
-  {{#each burgers}}
-  {{#unless devoured}}
-  {{burger_name}}
-  {{/unless}}
-  {{/each}}
-</ul>
 
-<h2>Add a Burger</h2>
-<form id="create-form">
+<div class="card postBurger">
+    <form class="form" id="create-form">
+        <h2 class="header2 addBurgerH2">Add a Burger</h2>
 
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
-  </div>
+        <div class="form-group">
+            <label for="ca">Burger Name:</label>
+            <input class="form-control" type="text" id="ca" name="name">
+        </div>
+        <button type="submit">Add Burger</button>
+    </form>
+</div>
 
-  <button type="submit">Add Cat</button>
-</form>
+  {{!-- <div class="form-group">
+    <label for="exampleFormControlTextarea1">Example textarea</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div> --}}
