--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,8 +11,7 @@
         <div class="burgerBox bg-primary">
             <div class="p-1 text-white">{{burger_name}}
             </div>
-            <button type="button " class="devourBtn btn btn-warning btn-large change-devoured" data-id="{{id}}"
-                data-newDevoured="{{sleep}}">Devour
+            <button type="button " class="devourBtn btn btn-warning btn-large change-devoured" data-id="{{id}}">Devour
             </button>
         </div>
         {{/unless}}
