--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -3,10 +3,6 @@
     padding:0;
 }
 
-body{
-    /* background-color:black; */
-}
-
 .burger-img{
     height:25vh;
 }
@@ -21,13 +17,13 @@ body{
     flex-direction: row;
     justify-content: space-evenly;
 }
-.ordered-burgerCol{
+
+.devoured-burgerCol{
     display: flex;
     flex-direction: column;
     justify-content:space-between;
 }
 
-/* Post */
 .postBurger{
     width:50vw;
     border:solid;
